--- a/style.css
+++ b/style.css
@@ -133,8 +133,27 @@ header { /*Cabeçalho*/
 }
 
 main {
-    margin-top: 110px; /*Isto vai garantir que o main esteja 10 pixeis abaixo do header na posição inicial*/
-    height: 850px;
+    margin-top: 100px; /*Isto vai garantir que o main esteja 10 pixeis abaixo do header na posição inicial*/
+    height: 860px;
+}
+
+main p {
+    text-indent: 20px;
+    text-align: justify;
+    margin-top: 5px;
+}
+
+.content {
+    display: inline-block;
+    padding: 20px;
+    width: 80vh;
+    background-color: rgba(133, 133, 133, 0.5);
+    border-radius: 10px;
+    margin-left: 50px;
+    margin-right: 10px;
+    margin-top: 200px;
+    margin-bottom: 50px;
+    box-shadow: 0 12px 18px rgba(0, 0, 0, 0.4);
 }
 
 footer {
