--- a/style_prototype.css
+++ b/style_prototype.css
@@ -200,8 +200,7 @@ main {
 }
 
 .car_box button:hover {
-    width: 161px;
-    height: 44px;
+    transform: scale(1.1);
     border: 3px solid #ff7878;
 }
 
