btn color update

--- a/style_prototype.css
+++ b/style_prototype.css
@@ -169,7 +169,7 @@ main {
 .car_box {
     width: 30vh;
     height: 24vh;
-    background-color: var(--cor-secundaria);
+    background-color: var(--cor-sextenaria);
     padding: 0px;
     text-align: center;
     border: none;
