--- a/marcas/style.css
+++ b/marcas/style.css
@@ -154,7 +154,6 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 20px;
     margin-top: 120px;
     margin-left: 50px;
     margin-right: 50px;
@@ -162,20 +161,20 @@ main {
 
 .car_img {
     width: 100%;
-    height: auto;
+    height: 90px;
     background-color: var(--cor-terciaria);
 }
 
 .car_box {
     width: 30vh;
-    height: 24vh;
+    height: 30vh;
     background-color: var(--cor-sextenaria);
-    padding: 0px;
+    padding: 5px;
     text-align: center;
     border: none;
     box-sizing: border-box;
     overflow: hidden;
-
+    margin-bottom: 10px;
 }
 
 .content {
